--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -1,15 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Import Python Modules\n",
+    "First import the modules that are used at this project:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +19,18 @@
     "import pandas as pd\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Load Data\n",
+    "\n",
+    "To analyze the data of OkCupid app we import the data of `profiles.csv` and create the `profiles` DataFrame. It will be usefull to explore the first 5 rows to see what kind of information does the DataFrame contains."
+   ]
   },
   {
    "cell_type": "code",
@@ -292,6 +296,285 @@
    "source": [
     "profiles = pd.read_csv('profiles.csv', encoding='utf-8')\n",
     "profiles.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using the **info()** command we can find several important data, first according to the type of variable we have 3 numerical characteristics and 28 categorical characteristics, we can also observe that there are characteristics in which we have null values. And also, the data set takes up 14.2 MB of space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 59946 entries, 0 to 59945\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   age          59946 non-null  int64  \n",
+      " 1   body_type    54650 non-null  object \n",
+      " 2   diet         35551 non-null  object \n",
+      " 3   drinks       56961 non-null  object \n",
+      " 4   drugs        45866 non-null  object \n",
+      " 5   education    53318 non-null  object \n",
+      " 6   essay0       54458 non-null  object \n",
+      " 7   essay1       52374 non-null  object \n",
+      " 8   essay2       50308 non-null  object \n",
+      " 9   essay3       48470 non-null  object \n",
+      " 10  essay4       49409 non-null  object \n",
+      " 11  essay5       49096 non-null  object \n",
+      " 12  essay6       46175 non-null  object \n",
+      " 13  essay7       47495 non-null  object \n",
+      " 14  essay8       40721 non-null  object \n",
+      " 15  essay9       47343 non-null  object \n",
+      " 16  ethnicity    54266 non-null  object \n",
+      " 17  height       59943 non-null  float64\n",
+      " 18  income       59946 non-null  int64  \n",
+      " 19  job          51748 non-null  object \n",
+      " 20  last_online  59946 non-null  object \n",
+      " 21  location     59946 non-null  object \n",
+      " 22  offspring    24385 non-null  object \n",
+      " 23  orientation  59946 non-null  object \n",
+      " 24  pets         40025 non-null  object \n",
+      " 25  religion     39720 non-null  object \n",
+      " 26  sex          59946 non-null  object \n",
+      " 27  sign         48890 non-null  object \n",
+      " 28  smokes       54434 non-null  object \n",
+      " 29  speaks       59896 non-null  object \n",
+      " 30  status       59946 non-null  object \n",
+      "dtypes: float64(1), int64(2), object(28)\n",
+      "memory usage: 14.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "profiles.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most of the variables are pretty intituive except fot the **easy** columns and the **last_online**. When printing them it is possible to understand that last online corresponds to a **date** variable and that the **essay** columns are divided into:\n",
+    "\n",
+    "1. **essay0**: Summary of who are you\n",
+    "1. **essay1**: What are you doing with your life\n",
+    "1. **essay2**: What are you good at\n",
+    "1. **essay3**: First thing people notice about you\n",
+    "1. **essay4**: Favorite books, movies, show, music, food\n",
+    "1. **essay5**: The six things you could never do without\n",
+    "1. **essay6**: You spend a lot of time thinking about\n",
+    "1. **essay7**: On a typical Friday night you are\n",
+    "1. **essay8**: The most private thing you are willing to admit\n",
+    "1. **essay9**: You should message me if..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>essay0</th>\n",
+       "      <th>essay1</th>\n",
+       "      <th>essay2</th>\n",
+       "      <th>essay3</th>\n",
+       "      <th>essay4</th>\n",
+       "      <th>essay5</th>\n",
+       "      <th>essay6</th>\n",
+       "      <th>essay7</th>\n",
+       "      <th>essay8</th>\n",
+       "      <th>essay9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>i am a chef: this is what that means.&lt;br /&gt;\\n1...</td>\n",
+       "      <td>dedicating everyday to being an unbelievable b...</td>\n",
+       "      <td>being silly. having ridiculous amonts of fun w...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>i am die hard christopher moore fan. i don't r...</td>\n",
+       "      <td>delicious porkness in all of its glories.&lt;br /...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>i am very open and will share just about anyth...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>i'm not ashamed of much, but writing public te...</td>\n",
+       "      <td>i make nerdy software for musicians, artists, ...</td>\n",
+       "      <td>improvising in different contexts. alternating...</td>\n",
+       "      <td>my large jaw and large glasses are the physica...</td>\n",
+       "      <td>okay this is where the cultural matrix gets so...</td>\n",
+       "      <td>movement&lt;br /&gt;\\nconversation&lt;br /&gt;\\ncreation&lt;b...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>viewing. listening. dancing. talking. drinking...</td>\n",
+       "      <td>when i was five years old, i was known as \"the...</td>\n",
+       "      <td>you are bright, open, intense, silly, ironic, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>i work in a library and go to school. . .</td>\n",
+       "      <td>reading things written by old dead people</td>\n",
+       "      <td>playing synthesizers and organizing books acco...</td>\n",
+       "      <td>socially awkward but i do my best</td>\n",
+       "      <td>bataille, celine, beckett. . .&lt;br /&gt;\\nlynch, j...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cats and german philosophy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>you feel so inclined.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              essay0  \\\n",
+       "1  i am a chef: this is what that means.<br />\\n1...   \n",
+       "2  i'm not ashamed of much, but writing public te...   \n",
+       "3          i work in a library and go to school. . .   \n",
+       "\n",
+       "                                              essay1  \\\n",
+       "1  dedicating everyday to being an unbelievable b...   \n",
+       "2  i make nerdy software for musicians, artists, ...   \n",
+       "3          reading things written by old dead people   \n",
+       "\n",
+       "                                              essay2  \\\n",
+       "1  being silly. having ridiculous amonts of fun w...   \n",
+       "2  improvising in different contexts. alternating...   \n",
+       "3  playing synthesizers and organizing books acco...   \n",
+       "\n",
+       "                                              essay3  \\\n",
+       "1                                                NaN   \n",
+       "2  my large jaw and large glasses are the physica...   \n",
+       "3                  socially awkward but i do my best   \n",
+       "\n",
+       "                                              essay4  \\\n",
+       "1  i am die hard christopher moore fan. i don't r...   \n",
+       "2  okay this is where the cultural matrix gets so...   \n",
+       "3  bataille, celine, beckett. . .<br />\\nlynch, j...   \n",
+       "\n",
+       "                                              essay5  \\\n",
+       "1  delicious porkness in all of its glories.<br /...   \n",
+       "2  movement<br />\\nconversation<br />\\ncreation<b...   \n",
+       "3                                                NaN   \n",
+       "\n",
+       "                       essay6  \\\n",
+       "1                         NaN   \n",
+       "2                         NaN   \n",
+       "3  cats and german philosophy   \n",
+       "\n",
+       "                                              essay7  \\\n",
+       "1                                                NaN   \n",
+       "2  viewing. listening. dancing. talking. drinking...   \n",
+       "3                                                NaN   \n",
+       "\n",
+       "                                              essay8  \\\n",
+       "1  i am very open and will share just about anyth...   \n",
+       "2  when i was five years old, i was known as \"the...   \n",
+       "3                                                NaN   \n",
+       "\n",
+       "                                              essay9  \n",
+       "1                                                NaN  \n",
+       "2  you are bright, open, intense, silly, ironic, ...  \n",
+       "3                              you feel so inclined.  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profiles.iloc[[1,2,3],[6,7,8,9,10,11,12,13,14,15]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2012-06-28-20-30\n",
+       "1    2012-06-29-21-41\n",
+       "2    2012-06-27-09-10\n",
+       "3    2012-06-28-14-22\n",
+       "4    2012-06-27-21-26\n",
+       "Name: last_online, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profiles.last_online.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Separate data into Train and Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train, test \u001b[38;5;241m=\u001b[39m train_test_split(profiles, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m22\u001b[39m)\n\u001b[0;32m      2\u001b[0m train\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprofiles_train.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m      3\u001b[0m test\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprofiles_test.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train, test = train_test_split(profiles, test_size=0.2, random_state=22)\n",
+    "train.to_csv('profiles_train.csv', index = False)\n",
+    "test.to_csv('profiles_test.csv', index = False)"
    ]
   },
   {
